java_client: Update code for Java version 12.