@@ -503,13 +503,11 @@ public class Xpm {
 				", colcount = " + colcount + ", cpp = " + charsperpixel );
 
 		if ( charsperpixel == 1 ) {
-			colorlookup.put( new Integer( ' ' ),
-					new Integer( 0x00000000 ) );
+			colorlookup.put( Integer.valueOf( ' ' ), Integer.valueOf( 0x00000000 ) );
 		} else {
 			int tmpchar = ( ' ' & 0xff ) << 8;
 			tmpchar |= ( ' ' & 0xff );
-			colorlookup.put( new Integer( ( tmpchar & 0xffff ) ),
-					new Integer( 0x00000000 ) );
+			colorlookup.put( Integer.valueOf( ( tmpchar & 0xffff ) ), Integer.valueOf( 0x00000000 ) );
 		}
 		/**************************************************
 		 * Now do parsing of color naming/indexing
@@ -535,7 +533,7 @@ public class Xpm {
 						xpm.substring( parse, parse + charsperpixel ) );
 			}
 			if ( charsperpixel == 1 ) {
-				colref = new Integer( xpm.charAt( parse ++ ) );
+				colref = Integer.valueOf( xpm.charAt( parse ++ ) );
 			} else {
 				int tmpchar = xpm.charAt( parse ++ );
 				tmpchar = ( tmpchar & 0xff ) << 8;
@@ -546,10 +544,10 @@ public class Xpm {
 							" which generates char "+
 							( tmpchar & 0xffff ) );
 				}
-				colref = new Integer( tmpchar & 0xffff );
+				colref = tmpchar & 0xffff;
 			}
 
-			rgb = new Integer( NameToRGB( colorname ) );
+			rgb = Integer.valueOf( NameToRGB( colorname ) );
 			if ( debugflag ) {
 				debug( "Color num parsed for \"" +colorname + "\"( "+
 						Integer.toHexString( colref.intValue( ) )+
@@ -588,7 +586,7 @@ public class Xpm {
 					tmpchar = ( tmpchar & 0xff ) << 8;
 					tmpchar |= xpm.charAt( pix ) & 0xff;
 				}
-				pixchar = new Integer( tmpchar & 0xffff );
+				pixchar = Integer.valueOf( tmpchar & 0xffff );
 
 				pixval = colorlookup.get( pixchar );
 				if ( pixval == null ) {
